# yr32-judgesystem

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: actionlint.yml  build-image.yml  ci.yml  validate-renovate.yml
src/: main.rs  model.rs
static/: index.html  main.js  style.css
