[package]
name = "judge-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-embed = "0.1.0"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
bcrypt = "0.14.0"
envy = "0.4.2"
once_cell = "1.18.0"
rust-embed = "6.8.1"
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.104"
static-files = "0.2.3"
tokio = "1.29.1"
ulid = "1.0.0"
wait-timeout = "0.2.0"
