[package]
name = "judge-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-embed = "0.1.0"
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
bcrypt = "0.15.1"
envy = "0.4.2"
once_cell = "1.19.0"
rust-embed = "8.3.0"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
static-files = "0.2.3"
tokio = "1.37.0"
ulid = "1.1.2"
wait-timeout = "0.2.0"
mime_guess="2.0.4"
