[package]
name = "judge-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-embed = "0.1.0"
actix-web = "4.12.0"
actix-web-httpauth = "0.8.2"
bcrypt = "0.18.0"
envy = "0.4.2"
once_cell = "1.20.3"
rust-embed = "8.6.0"
serde = { version = "1.0.218", features = ["derive"]}
serde_json = "1.0.140"
static-files = "0.3.0"
tokio = "1.43.0"
ulid = "1.2.0"
wait-timeout = "0.2.1"
mime_guess = "2.0.5"
